// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Router. csrf Должен выбросить ошибку, если мидлвара express-yandexuid не выставила куку yandexuid 1`] = `Array []`;

exports[`Router. csrf Должен корректно обработать запрос типа OPTIONS 1`] = `Array []`;

exports[`Router. csrf Должен создать csrf токен на основе yandexuid 1`] = `
Array [
  Object {
    "body": Object {
      "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X x.y; rv:42.0) Gecko/20100101 Firefox/42.0",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip,deflate",
      "content-length": 97,
      "content-type": "application/json",
      "host": "uatraits-test.qloud.yandex.ru",
      "user-agent": "got/6.7.1 (https://github.com/sindresorhus/got)",
    },
    "method": "POST",
    "type": "REQUEST",
    "url": "http://uatraits-test.qloud.yandex.ru/v0/detect",
  },
  Object {
    "body": Object {
      "BrowserEngine": "Gecko",
      "BrowserEngineVersion": "42.0",
      "BrowserName": "Firefox",
      "BrowserVersion": "42.0",
      "CSP1Support": true,
      "OSFamily": "MacOS",
      "SVGSupport": true,
      "historySupport": true,
      "isBrowser": true,
      "isMobile": false,
      "isTouch": false,
      "localStorageSupport": true,
      "postMessageSupport": true,
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "POST",
    "statusCode": 200,
    "type": "RESPONSE",
    "url": "http://uatraits-test.qloud.yandex.ru/v0/detect",
  },
]
`;

exports[`Router. csrf Должен создать csrf токен на основе yandexuid, даже если запрос в uatraits упал 1`] = `
Array [
  Object {
    "body": Object {
      "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X x.y; rv:42.0) Gecko/20100101 Firefox/42.0",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip,deflate",
      "content-length": 97,
      "content-type": "application/json",
      "host": "uatraits-test.qloud.yandex.ru",
      "user-agent": "got/6.7.1 (https://github.com/sindresorhus/got)",
    },
    "method": "POST",
    "type": "REQUEST",
    "url": "http://uatraits-test.qloud.yandex.ru/v0/detect",
  },
  Object {
    "body": Object {
      "BrowserEngine": "Gecko",
      "BrowserEngineVersion": "42.0",
      "BrowserName": "Firefox",
      "BrowserVersion": "42.0",
      "CSP1Support": true,
      "OSFamily": "MacOS",
      "SVGSupport": true,
      "historySupport": true,
      "isBrowser": true,
      "isMobile": false,
      "isTouch": false,
      "localStorageSupport": true,
      "postMessageSupport": true,
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "POST",
    "statusCode": 500,
    "type": "RESPONSE",
    "url": "http://uatraits-test.qloud.yandex.ru/v0/detect",
  },
]
`;

exports[`Router. csrf Должен создать csrf токен на основе уже имеющейся куки yandexuid 1`] = `
Array [
  Object {
    "body": Object {
      "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X x.y; rv:42.0) Gecko/20100101 Firefox/42.0",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip,deflate",
      "content-length": 97,
      "content-type": "application/json",
      "host": "uatraits-test.qloud.yandex.ru",
      "user-agent": "got/6.7.1 (https://github.com/sindresorhus/got)",
    },
    "method": "POST",
    "type": "REQUEST",
    "url": "http://uatraits-test.qloud.yandex.ru/v0/detect",
  },
  Object {
    "body": Object {
      "BrowserEngine": "Gecko",
      "BrowserEngineVersion": "42.0",
      "BrowserName": "Firefox",
      "BrowserVersion": "42.0",
      "CSP1Support": true,
      "OSFamily": "MacOS",
      "SVGSupport": true,
      "historySupport": true,
      "isBrowser": true,
      "isMobile": false,
      "isTouch": false,
      "localStorageSupport": true,
      "postMessageSupport": true,
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "POST",
    "statusCode": 200,
    "type": "RESPONSE",
    "url": "http://uatraits-test.qloud.yandex.ru/v0/detect",
  },
]
`;

exports[`Router. csrf Должен создать csrf токен на основе уже имеющейся куки yandexuid, даже если запрос в uatraits упал 1`] = `
Array [
  Object {
    "body": Object {
      "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X x.y; rv:42.0) Gecko/20100101 Firefox/42.0",
    },
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip,deflate",
      "content-length": 97,
      "content-type": "application/json",
      "host": "uatraits-test.qloud.yandex.ru",
      "user-agent": "got/6.7.1 (https://github.com/sindresorhus/got)",
    },
    "method": "POST",
    "type": "REQUEST",
    "url": "http://uatraits-test.qloud.yandex.ru/v0/detect",
  },
  Object {
    "body": Object {
      "BrowserEngine": "Gecko",
      "BrowserEngineVersion": "42.0",
      "BrowserName": "Firefox",
      "BrowserVersion": "42.0",
      "CSP1Support": true,
      "OSFamily": "MacOS",
      "SVGSupport": true,
      "historySupport": true,
      "isBrowser": true,
      "isMobile": false,
      "isTouch": false,
      "localStorageSupport": true,
      "postMessageSupport": true,
    },
    "headers": Object {
      "content-type": "application/json",
    },
    "method": "POST",
    "statusCode": 500,
    "type": "RESPONSE",
    "url": "http://uatraits-test.qloud.yandex.ru/v0/detect",
  },
]
`;
